--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,17 +14,25 @@
         android:layout_marginTop="277dp"
         android:layout_marginEnd="92dp"
         android:layout_marginRight="92dp"
-        android:layout_marginBottom="343dp"
         android:background="#44C249"
         android:gravity="center|top"
         android:shadowColor="#0029CE2F"
-        android:text="Hello World!"
+        android:text="My name is Daniel Curiel and thats Jericho lol"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="225dp"
+        android:layout_height="225dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:srcCompat="@drawable/slop3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
