--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,19 +11,17 @@
         android:layout_width="228dp"
         android:layout_height="111dp"
         android:layout_marginStart="91dp"
-        android:layout_marginTop="277dp"
         android:layout_marginEnd="92dp"
         android:layout_marginRight="92dp"
         android:background="#44C249"
         android:gravity="center|top"
         android:shadowColor="#0029CE2F"
-        android:text="My name is Daniel Curiel and thats Jericho lol"
+        android:text="This is Jericho from the hit show Arcane"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/imageView"
